--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "maker",
+	"name": "@sandro-sikic/maker",
 	"version": "1.0.0",
 	"description": "A library to create dev cli",
 	"main": "index.js",
-	"author": "",
+	"author": "sandro-sikic",
 	"license": "ISC",
 	"dependencies": {
 		"@inquirer/prompts": "^8.2.0",
