--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
 	"description": "A library to create dev cli",
 	"main": "index.js",
 	"author": "sandro-sikic",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/sandro-sikic/maker"
+	},
 	"license": "ISC",
 	"dependencies": {
 		"@inquirer/prompts": "^8.2.0",
