--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "@sandro-sikic/maker",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"description": "A library to create dev cli",
 	"main": "index.js",
+	"types": "index.d.ts",
 	"author": "sandro-sikic",
 	"repository": {
 		"type": "git",
