--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
 	"name": "@sandro-sikic/maker",
-	"version": "1.0.5",
+	"version": "1.0.6",
 	"description": "A library to create dev cli",
 	"main": "index.js",
 	"types": "index.d.ts",
+	"scripts": {
+		"test": "jest"
+	},
 	"author": "sandro-sikic",
 	"repository": {
 		"type": "git",
@@ -17,6 +20,10 @@
 	"devDependencies": {
 		"archiver": "^5.3.1",
 		"pkg": "^5.8.1",
-		"rimraf": "^5.0.1"
+		"rimraf": "^5.0.1",
+		"jest": "^29.7.0",
+		"babel-jest": "^29.7.0",
+		"@babel/core": "^7.23.0",
+		"@babel/preset-env": "^7.23.0"
 	}
 }
