--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "@sandro-sikic/maker",
 	"version": "1.0.7",
+	"type": "module",
 	"description": "A library to create dev cli",
 	"main": "index.js",
 	"types": "index.d.ts",
 	"scripts": {
-		"test": "jest"
+		"test": "vitest"
 	},
 	"author": "sandro-sikic",
 	"repository": {
@@ -18,12 +19,6 @@
 		"ora": "^9.3.0"
 	},
 	"devDependencies": {
-		"archiver": "^5.3.1",
-		"pkg": "^5.8.1",
-		"rimraf": "^5.0.1",
-		"jest": "^29.7.0",
-		"babel-jest": "^29.7.0",
-		"@babel/core": "^7.23.0",
-		"@babel/preset-env": "^7.23.0"
+		"vitest": "^4.0.18"
 	}
 }
